mengaktifkan kembali service worker yang telah disempurnakan, menambahkan opsi pilihan nominal donasi

--- a/app/views/admin/bantuan/selengkapnya.html
+++ b/app/views/admin/bantuan/selengkapnya.html
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 d-flex justify-content-between" id="actioon-area">
+                    <div class="col-12 d-flex justify-content-between" id="action-area">
                         <button class="btn btn-link font-weight-bolder text-warning"
                             data-dismiss="modal">Batal</button>
                         <button class="btn btn-outline-primary" id="buat-deskripsi-selengkapnya" type="submit">Simpan</button>
