--- a/app/views/default.html
+++ b/app/views/default.html
@@ -33,6 +33,15 @@
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
     <link rel="manifest" href="/manifest.json">
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-5MM5MQSD');
+    </script>
+        <!-- End Google Tag Manager -->
 </head>
 
 <body<?= (isset($this->data['uri']) ? ' data-uri="'. $this->data['uri'] .'"' : '') ?>
@@ -46,6 +55,14 @@
             </div>
         </div>
     </div>
+    <!-- Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5MM5MQSD"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
+        <!-- End Google Tag Manager (noscript) -->
     <!-- /End Preloader -->
     <!-- Start Header Area -->
     <header class="header navbar-area d-flex align-items-center">
