--- a/app/views/donasi.html
+++ b/app/views/donasi.html
@@ -20,6 +20,25 @@
     <link rel="stylesheet" href="/assets/route/default/core/css/main.css">
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
+    <link rel="manifest" href="/manifest.json">
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-5MM5MQSD');
+    </script>
+    <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QELLKXH3BZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-QELLKXH3BZ');
+    </script>
 </head>
 <body<?= (isset($this->data['uri']) ? ' data-uri="'. $this->data['uri'] .'"' : '') ?>>
     <!-- Preloader -->
@@ -32,6 +51,12 @@
         </div>
     </div>
     <!-- /End Preloader -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5MM5MQSD"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <?= $this->action_view; ?>
 
