mengubah mersingkat route dari detil campaign dengan menggunakan tag, menambahkan tag pada halaman bantuan, memberpaiki bug pada lahaman pengubahan data bantuan section gambar yang tidak ada

--- a/app/views/admin/bantuan/formulir.html
+++ b/app/views/admin/bantuan/formulir.html
@@ -60,6 +60,14 @@
                                                 </div>
                                             </div>
                                             <div class="col-12">
+                                                <div class="form-group" id="tag">
+                                                    <label class="form-control-label" for="input-tag-campaign">Tag</label>
+                                                    <input spellcheck="false" type="text" id="input-tag-campaign"
+                                                        class="form-control" placeholder="Tag Campaign" name="tag"
+                                                        maxlength="50" data-required="true">
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
                                                 <div class="form-group" id="nama_penerima">
                                                     <label class="form-control-label"
                                                         for="input-penerima-program">Penerima Bantuan</label>
