--- a/app/views/admin/bantuan/form-update.html
+++ b/app/views/admin/bantuan/form-update.html
@@ -62,6 +62,15 @@
                                                 </div>
                                             </div>
                                             <div class="col-12">
+                                                <div class="form-group" id="tag">
+                                                    <label class="form-control-label" for="input-tag-campaign">Tag</label>
+                                                    <input spellcheck="false" type="text" id="input-tag-campaign"
+                                                        class="form-control" placeholder="Tag Campaign" name="tag"
+                                                        maxlength="50" data-required="true" <?=(isset($this->data['bantuan']->tag) ? '
+                                                        value="'. $this->data['bantuan']->tag .'"' : '') ?>>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
                                                 <div class="form-group" id="nama_penerima">
                                                     <label class="form-control-label"
                                                         for="input-penerima-program">Penerima Bantuan</label>
