--- a/app/views/donasi/buat/baru.html
+++ b/app/views/donasi/buat/baru.html
@@ -4,7 +4,7 @@
 <!-- Header -->
 <section class="header text-center py-3 sticky">
     <div class="container d-flex gap-md-5 gap-2 justify-content-md-center align-items-md-center">
-        <a href="/bantuan/detil/<?= $data['bantuan']->id_bantuan; ?>">
+        <a href="/bantuan/<?= (!is_null($data['bantuan']->tag) ? $data['bantuan']->tag : 'detil/'. $data['bantuan']->id_bantuan); ?>">
             <i class="lni lni-chevron-left fw-bolder fs-5 text-warning"></i>
         </a>
         <h5 class="mb-0"><span class="fw-lighter">Donasi</span> <?= $data['bantuan']->nama ?></h5>
@@ -15,23 +15,53 @@
 <section class="form">
     <div class="container">
         <div class="row justify-content-center">
-            <form spellcheck="false" class="col col-md-9 col-lg-6" autocomplete="off" method="post" action="/donasi/pembayaran/index/<?= $data['bantuan']->id_bantuan ?>">
+            <form spellcheck="false" class="col col-md-9 col-lg-6" autocomplete="off" method="post" action="/donasi/pembayaran/<?= (!is_null($data['bantuan']->tag) ? $data['bantuan']->tag : 'index/'. $data['bantuan']->id_bantuan); ?>">
                 <div class="row g-0 g-md-3">
                     <div class="col-12 mb-3">
                         <!-- Ini Nanti pake kondisional jika opsi diset saat create bantuan -->
                         <h5 class="mb-2">Pilihan Donasi</h5>
-                        <div class="row m-0 gap-3">
-                            <div class="col pilihan-donasi form-control inputGroup">
-                                <input type="radio" name="pilihan_donasi" id="radio1">
-                                <label for="radio1">10.000</label>
+                        <div class="row m-0 gap-3" id="list-pilihan">
+                            <!-- <div class="form-control col-6 col-md p-0">
+                                <div class="pilihan-donasi inputGroup p-0">
+                                    <input type="radio" name="pilihan_donasi" id="radio1">
+                                    <label for="radio1">2.000</label>
+                                </div>
                             </div>
-                            <div class="col pilihan-donasi form-control inputGroup">
-                                <input type="radio" name="pilihan_donasi" id="radio2">
-                                <label for="radio2">50.000</label>
+                            <div class="form-control col-6 col-md p-0">
+                                <div class="pilihan-donasi inputGroup p-0">
+                                    <input type="radio" name="pilihan_donasi" id="radio2">
+                                    <label for="radio2">5.000</label>
+                                </div>
+                            </div> -->
+                            <div class="form-control col-6 col-md p-0">
+                                <div class="pilihan-donasi inputGroup p-0">
+                                    <input type="radio" name="pilihan_donasi" id="radio3">
+                                    <label for="radio3">10.000</label>
+                                </div>
                             </div>
-                            <div class="col pilihan-donasi form-control inputGroup">
-                                <input type="radio" name="pilihan_donasi" id="radio3">
-                                <label for="radio3">100.000</label>
+                            <div class="form-control col-6 col-md p-0">
+                                <div class="pilihan-donasi inputGroup p-0">
+                                    <input type="radio" name="pilihan_donasi" id="radio4">
+                                    <label for="radio4">15.000</label>
+                                </div>
+                            </div>
+                            <div class="form-control col-6 col-md p-0">
+                                <div class="pilihan-donasi inputGroup p-0">
+                                    <input type="radio" name="pilihan_donasi" id="radio5">
+                                    <label for="radio5">25.000</label>
+                                </div>
+                            </div>
+                            <div class="form-control col-6 col-md p-0">
+                                <div class="pilihan-donasi inputGroup p-0">
+                                    <input type="radio" name="pilihan_donasi" id="radio6">
+                                    <label for="radio6">50.000</label>
+                                </div>
+                            </div>
+                            <div class="form-control col-6 col-md p-0">
+                                <div class="pilihan-donasi inputGroup p-0">
+                                    <input type="radio" name="pilihan_donasi" id="radio7">
+                                    <label for="radio7">100.000</label>
+                                </div>
                             </div>
                         </div>
                     </div>
