--- a/app/views/admin/donasi/buat.html
+++ b/app/views/admin/donasi/buat.html
@@ -142,6 +142,7 @@
                                         </b>
                                     </div>
                                     <div class="col-12">
+                                        <?= (!is_null($donasi_terakhir->nama_cp) ? '<span class="badge badge-warning py-1 px-2 font-weight-bold">'.$donasi_terakhir->pay_gate.'</span>':''); ?>
                                         <div class="text-muted badge badge-primary text-capitalize py-1 px-2">
                                             <span class="jenis-cp">
                                                 <?= Utility::keteranganJenisChannelPayment($donasi_terakhir->jenis_cp); ?>
