--- a/app/views/donasi.html
+++ b/app/views/donasi.html
@@ -2,10 +2,20 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-5MM5MQSD');
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="facebook-domain-verification" content="xmnklhqeygng0kcohwlzaka45pu0km" />
+    <meta name="theme-color" content="#FFF">
     <title>
         <?= $this->getTitle() . Config::get('defaults/default_title') ?>
     </title>
@@ -21,15 +31,6 @@
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
     <link rel="manifest" href="/manifest.json">
-    <!-- Google Tag Manager -->
-    <!-- <script>
-        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-5MM5MQSD');
-    </script> -->
-    <!-- End Google Tag Manager -->
     <!-- Google tag (gtag.js) -->
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QELLKXH3BZ"></script>
     <script>
@@ -41,6 +42,12 @@
     </script> -->
 </head>
 <body<?= (isset($this->data['uri']) ? ' data-uri="'. $this->data['uri'] .'"' : '') ?>>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5MM5MQSD"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- Preloader -->
     <div class="preloader">
         <div class="preloader-inner">
@@ -51,13 +58,6 @@
         </div>
     </div>
     <!-- /End Preloader -->
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5MM5MQSD"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
     <?= $this->action_view; ?>
 
     <!-- ========================= scroll-top ========================= -->
@@ -71,5 +71,4 @@
     <?= $this->getScript('controller'); ?>
     <?= $this->getScript('action'); ?>
     </body>
-
 </html>
