--- a/app/views/donasi/buat/baru.html
+++ b/app/views/donasi/buat/baru.html
@@ -3,11 +3,15 @@
 } ?>
 <!-- Header -->
 <section class="header text-center py-3 sticky">
-    <div class="container d-flex gap-md-5 gap-2 justify-content-md-center align-items-md-center">
-        <a href="/bantuan/<?= (!is_null($data['bantuan']->tag) ? $data['bantuan']->tag : 'detil/'. $data['bantuan']->id_bantuan); ?>">
-            <i class="lni lni-chevron-left fw-bolder fs-5 text-warning"></i>
-        </a>
-        <h5 class="mb-0"><span class="fw-lighter">Donasi</span> <?= $data['bantuan']->nama ?></h5>
+    <div class="container">
+        <div class="row w-100 justify-content-center">
+            <div class="col col-md-9 col-lg-6 d-flex gap-2">
+                <a href="/bantuan/<?= (!is_null($data['bantuan']->tag) ? $data['bantuan']->tag : 'detil/'. $data['bantuan']->id_bantuan); ?>">
+                    <i class="lni lni-chevron-left fw-bolder fs-5 text-warning"></i>
+                </a>
+                <h5 class="mb-0"><span class="fw-lighter">Donasi</span> <?= $data['bantuan']->nama ?></h5>
+            </div>
+        </div>
     </div>
 </section>
 <!-- End Header -->
@@ -76,9 +80,6 @@
                         <div class="form-floating select-dd mb-3<?= (!empty($data_error_feedback['metode_pembayaran']['rule']) ? ' text-danger' : '') ?>">
                             <select class="form-select selectpicker" id="floatingSelectMPembayaran" aria-label="Metode Pembayaran" name="metode_pembayaran">
                                 <option value="">Pilih Metode Pembayaran</option>
-                                <?php foreach($data['metode_pembayaran'] as $data_cp) { ?>
-                                    <option value="<?= $data_cp->id_cp; ?>" data-image="<?= $data_cp->path_gambar; ?>"><?= (isset($data_cp->jenis) ? Utility::keteranganJenisChannelPayment($data_cp->jenis) : '') .' '. $data_cp->nama; ?></option>
-                                <?php } ?>
                             </select>
                             <label for="floatingSelectMPembayaran">Metode Pembayaran<?= (!empty($data_error_feedback['metode_pembayaran']['rule']) ? ' <span>' . str_ireplace('metode pembayaran', '', $data_error_feedback['metode_pembayaran']['feedback']) . '</span>' : '') ?></label>
                         </div>
