--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -16,8 +16,7 @@
     <link href="/vendors/nucleo/css/nucleo.css" rel="stylesheet">
     <link href="/vendors/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <!-- Core Style -->
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
